--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ ADMIN_ID=1
 PREPREFIX=0.NA
 PREFIX=
 IP_ADDRESS=
-HANDLE_SERVER_PORT=
+MYSERVER_SERVER_IP_ADDRESS=
+HANDLE_SERVER_IP_ADDRESS=
 HTTPS_KEY_FILE_PATH=
 HTTPS_PEM_FILE_PATH=
 NODE_TLS_REJECT_UNAUTHORIZED='0'
